version tablette correctifs

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -216,8 +216,7 @@ a{
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0 7px #c1c1c1;
-    
-    /*width: 20vh;*/
+    width: 17vw;
 }
 
 .description_hebergement{
@@ -277,7 +276,8 @@ a{
 }
 
 #tete_populaire i{
-    margin-left: 7vw;
+    justify-content: flex-end;
+    align-items: flex-end;
     font-size: x-large;
 }
 
@@ -324,7 +324,7 @@ a{
 }
 .nom_suite_populaire{
     font-size: medium;
-    margin-bottom: 3vh;
+    margin-bottom: 2vh;
     margin-top: 1vh;
 }
 .nom_suite_populaire span{
@@ -388,7 +388,7 @@ a{
 
 .calanques{
     background-image:url(../images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg) ;
-    background-position: -250px 0px;
+    background-position: -200px 0px;
 }
 
 .notredame{
@@ -436,12 +436,49 @@ footer a:hover{
     color: #0065FC;
 }
 .info {
-    margin-left: 40px;
 	font-size: x-large;
     font-weight: bold;
 
 }
 
 @media screen and (min-width: 768px),(max-width:1023px){
+    .choix{
+
+        background-color: white;
+        display: grid;
+        height:14rem;
+        grid-template-rows: 60%;
+        box-sizing: border-box;
+        border: 5px solid #fff;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 0 7px #c1c1c1;
+        width:17vw;
+    }
+   
+    #top{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    #hebergement{
+        order:0;
+    }
+    #populaires{
+        max-width: 50%;
+        order:1;
+    }
+    .choix_populaire{
+        display: flex;
+        background-color: white;
+        border: 5px solid #fff;
+        border-radius: 15px;
+        margin-bottom: 30px;
+        box-shadow: 0 0 7px #c1c1c1;
+        box-sizing: border-box;
+        overflow: hidden;
+        width: 100%;
+        height: 140px;
     
+    }
 }
